# seamonkey-2.53-comm

./: .eslintignore  .eslintignore.1504416-2.later  .gecko_rev.yml  .gitignore  .hgtags  client.py  latest_branch.txt
suite/: Makefile.in  app.mozbuild  build.mk  configure.in  confvars.sh  defs.mk  moz.build  moz.configure
suite/app/: Makefile.in  moz.build  nsSuiteApp.cpp  nsSuiteApp.cpp.1580359.later
suite/app/profile/: suite-prefs.js
suite/base/: jar.mn  moz.build
suite/base/content/: about.js  about.xhtml  buildconfig.css  buildconfig.html  charsetOverlay.xul  communicator.css  contentAreaClick.js  (+13 more)
suite/branding/: branding-common.mozbuild
suite/browser/: browser-places.js  browser-prefs.js  content.js  linkToolbarOverlay.js  mailNavigatorOverlay.js  metadata.js  navigator.js  navigatorOverlay.xul  nsBrowserContentHandler.js  nsBrowserContentListener.js  nsBrowserStatusHandler.js  nsTypeAheadFind.js  safeBrowsingOverlay.js  sessionHistoryUI.js  tabbrowser.xml  urlbarBindings.xml  webDeveloperOverlay.js  webDeveloperOverlay.xul
suite/common/: jar.mn  moz.build  tasksOverlay.js  utilityOverlay.js
suite/components/: moz.build  nsAbout.js  nsGopherProtocolStubHandler.js  nsSuiteGlue.js
suite/config/: version_display.txt  version_package.txt
suite/editor/: moz.build
suite/extensions/: moz.build
suite/installer/: Makefile.in  allowed-dupes.mn  package-manifest.in  removed-files.in
suite/locales/: Makefile.in  all-locales  filter.py  jar.mn  l10n-beta.ini  l10n.toml  shipped-locales
suite/mailnews/: commandglue.js  jar.mn  mail3PaneWindowCommands.js  mailContextMenus.js  mailTasksOverlay.js  mailWidgets.xml  mailWindow.js  mailWindowOverlay.js  messageWindow.js  msgHdrViewOverlay.js  msgMail3PaneWindow.js  msgViewNavigation.js  msgViewPickerOverlay.js  phishingDetector.js  searchBar.js  tabmail.xml  widgetglue.js
suite/modules/: Feeds.jsm  PermissionUI.jsm  RecentWindow.jsm  Sanitizer.jsm  SitePermissions.jsm  WindowsJumpLists.jsm  WindowsPreviewPerTab.jsm  moz.build
(+2632 files in other folders)
